Rename downloadingEnabled property to downloadEnabled
